Add Spring Security OAuth2 Resource Server configuration and migrate config to YAML
- Configure JWT-based OAuth2 resource server security
- Permit access to actuator endpoints (/actuator/**)
- Migrate application configuration from .properties to .yaml format
- Add Keycloak realm configuration file